2011-04-21  Andreas Kupries  <andreask@activestate.com>

	* modules/struct/queue_c.tcl: Disabled the critcl debug settings used
	* modules/pt/pt_rdengine_c.tcl: to work around bugs in critcl v2's
	* modules/pt/pt_parse_peg_c.tcl: handling of C companion files.
	* modules/pt/pt_cparam_config_critcl.tcl:

	* sak.tcl (__critcl): Fixed processing of -debug, added the
	  forgotten handling of its argument. Plus added handling of
	  option -target.

	* ./modules/sha1/sha256.h: Fixed the conditional definition of
	  uint64_t and uint32_t for aix and hpux machines.

2011-04-06  Andreas Kupries  <andreask@activestate.com>

	* modules/valtype: New module: Validation types. snit validation
	  types for various classes of numbers (ISBN, EAN, ...) and
	  general check-digit algorithms (luhn(5), verhoeff, ...).

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2011-01-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Trim dross of extracted version numbers.
	* support/devel/sak/note/cmd.tcl: Extended 'sak note' to accept
	* support/devel/sak/note/help.txt: a file of note data.

2011-01-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* modules/hook: New module 'hook'.
	* support/installation/modules.tcl:

2010-11-25  Andreas Kupries  <andreask@activestate.com>

	* examples/mime/maildemo.tcl: [Patch 3117246]: Added the standard
	  script prologue. Thanks to Stuart Cassoff.

2010-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* apps/dtplite.man: Extended with new option -exclude to specify
	* apps/dtplite: exclusion patterns (glob matching). Further fixed
	  issues with file paths causing resolution of include file paths
	  to break. This uses the new option -ibase of doctools 1.4.11 to
	  keep include resolution and HTML cross-link generation apart
	  from each other. Bumped version to 1.0.3.
