@@ -1,0 +1,4 @@
+2011-05-31  Andreas Kupries  <andreask@activestate.com>
+
+	* New module and package: lambda. Easy anonymous procedures for
+	  Tcl 8.5+.
