@@ -1,0 +1,4 @@
+2011-05-31  Andreas Kupries  <andreask@activestate.com>
+
+	* New module and package: try. Tcl 8.5+ forward compatibility
+	  implementation of try/catch/finally (TIP 329).
