@@ -1,3 +1,11 @@
+2011-05-31  Andreas Kupries  <andreask@activestate.com>
+
+	* New module and package: lambda. Easy anonymous procedures for
+	  Tcl 8.5+.
+
+	* New module and package: try. Tcl 8.5+ forward compatibility
+	  implementation of try/catch/finally (TIP 329).
+
 2011-04-21  Andreas Kupries  <andreask@activestate.com>
 
 	* modules/struct/queue_c.tcl: Disabled the critcl debug settings used
